react/src/styles/App.module.scss
/* ... */
.tabs {
    font-size: $font-size-small;
    line-height: $line-height-small;
    color: $color-text-light;

    & > button {
        text-align: center;
        background-color: $color-tab-background-dark;
        &.tabs__elem--active {
            cursor: initial;
            background-color: $color-tab-background;
            color: $color-text-normal;
        }
        &:not(.tabs__elem--active) {
            &:hover {
                background-color: $color-tab-background-darker;
            }
        }
    }


    &--course-list,
    &--lecture-list {
        @media (orientation: landscape) {
            position: absolute;
            vertical-align: top;
            width: 50px;
            margin-left: -50px;
        }
        @media (orientation: portrait) {
            display: flex;
            flex-direction: row;
        }

        > button {
            padding: 8px;
            @media (orientation: landscape) {
                display: block;
                margin-left: auto;
                margin-bottom: 6px;
                border-radius: $block-border-radius 0 0 $block-border-radius;
                line-height: 0;
            }
            @media (orientation: portrait) {
                display: inline-block;
                margin-right: 6px;
                border-radius: $block-border-radius $block-border-radius 0 0;
                flex: 1 1 0;
                &:last-child {
                    margin-right: 0;
                }
            }

            & > span {
                margin-left: 6px;

                @media (orientation: landscape) {
                    display: none;
                }
            }
        }
    }

    &--timetable {
        flex: 1 1 auto;
        @media (orientation: portrait) {
            width: 100%;
        }

        & > button {
            display: inline-block;
            vertical-align: top;
            margin-right: 6px;
            border-radius: $block-border-radius $block-border-radius 0 0;
            padding: 7px 10px;
            display: inline-flex;
            flex-direction: row;
            justify-content: center;
            @media (orientation: portrait) {
                width: 100%;
                background-color: $color-block-background;
                margin-bottom: 6px;
                border-radius: $block-border-radius;
                text-align: left;
                &.tabs__elem--active {
                    background-color: $color-block-background-dark;
                }
                &:not(.tabs__elem--active) {
                    &:hover {
                        background-color: $color-block-background-dark;
                    }
                }
            }
            &:not(.tabs__elem--active) {
                & > button {
                    @media (orientation: landscape) {
                        display:none;
                    }
                }
            }
            &:last-child:not(:first-child) {
                padding: 8px;
                line-height: 0;
                @media (orientation: portrait) {
                    margin-bottom: 0;
                }
            }

            & > span {
                flex: 1 1 auto;
            }

            & > button {
                color: $color-text-light;
                @media (orientation: landscape) {
                    margin-left: 4px;
                }
                @media (orientation: portrait) {
                    margin-left: 8px;
                }
                &:hover {
                    color: $color-text-dark;
                }

                & > span {
                    margin-left: 4px;
                    @media (orientation: landscape) {
                        display: none;
                    }
                }
            }
        }
    }
}


.section {
    width: 100%;
    height: 100%;
    padding: $section-padding;
    background-color: $color-section-background;
    border-radius: $section-border-radius;
    box-shadow: 0 3px 0 0 $color-section-shadow;


    &--with-tabs {
        display: inline-block;
        vertical-align: top;
        @media (orientation: landscape) {
            border-top-left-radius: 0;
        }
        @media (orientation: portrait) {
            border-top-left-radius: 0;
            border-top-right-radius: 0;
            flex: 1 1 auto;
        }
    }


    &--timetable {
        flex: auto;
        display: flex;
        @media (orientation: landscape) {
            flex-direction: row;
        }
        @media (orientation: portrait) {
            flex-direction: column;
            border-top-left-radius: 6px;
            border-top-right-radius: 6px;
        }
    }


    &--lecture-list {
        position: relative;
    }


    &--semester {
        height: initial;
        padding: 5px 8px;
        flex: 0 0 auto;
        font-size: $font-size-small;
        line-height: $line-height-small;
        display: flex;
        flex-direction: row;
        &.semester-ko {
            width: 90px;
        }
        &.semester-en {
            width: 100px;
        }
        @media (orientation: portrait) {
            padding: 0;
            background: none;
            box-shadow: none;
            margin-bottom: 10px;
        }

        & > button {
            flex: 0 0 auto;
            &.disable {
                pointer-events: none;
            }
        }

        & > span {
            flex: 1 1 auto;
            text-align: center;
            @media (orientation: portrait) {
                font-size: $font-size-big;
                line-height: $line-height-big;
            }
        }
    }
}
/* ... */

